fix pic page cropped on mobile

--- a/static/guli.scss
+++ b/static/guli.scss
@@ -47,6 +47,10 @@ body {
   align-items: center;
 }
 
+#pic-page img {
+  width: 100%;
+}
+
 #gallery {
   display: grid;
   gap: 5px;
@@ -55,11 +59,6 @@ body {
   img {
     max-width: 100%;
   }
-}
-
-#pic-page img {
-  margin-left: 50%;
-  transform: translateX(-50%);
 }
 
 /* rules for computer screens */
@@ -71,5 +70,10 @@ body {
   #index-links {
     margin-left: $links-margin;
     margin-right: $links-margin;
+  }
+
+  #pic-page img {
+    margin-left: 50%;
+    transform: translateX(-50%);
   }
 }
